# onefile

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: publish.yml
.github/workflows/: publish.yml
onefile/: __init__.py  junit.py  report_html.py  template.html
tests/: test_junit.py  test_report_html.py
tests/test_data/junit/: junit_0.xml  junit_1.xml  junit_2.xml
tests/test_data/report_html/: report_1.html  report_2.html  report_bs.html  report_bs_1.html  report_bs_2.html  report_bs_3.html
